--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-menu> </app-menu>
-<div class="text-layout">
+<!-- <div class="text-layout">
     <h1> {{ nombre | titlecase }} </h1>
     <h1> {{ '1000' | number }} </h1>
     <h1> {{ obj | json }} </h1>
@@ -22,4 +22,8 @@
     
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
         quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-</p-card>
+</p-card> -->
+
+<router-outlet> 
+    elvis
+</router-outlet>
