--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -6,24 +6,78 @@
 </div>
 
 
-<div class="p-grid" >
-    <div class="p-col-4">
-        <p-card header="uppercase | titlecase">
+<div class="grid" >
+    <div class="col">
+        <p-card header="uppercase"
+                [subheader]="nombreUpper | uppercase"
+        >
+            {{ nombreUpper | uppercase }}
 
         </p-card>
     </div>
-    <div class="p-col-4">
-       2
+    <hr>
+    <div class="col">
+        <p-card header="lowercase"
+                [subheader]="nombreLower | lowercase"
+        >
+            {{ nombreLower | lowercase }}
+
+        </p-card>
     </div>
-    <div class="p-col-4">
-       3
+    <hr>
+    <div class="col">
+        <p-card header="titlecase"
+                [subheader]="nombreCompleto | titlecase"
+        >
+            {{ nombreCompleto | titlecase }}
+
+        </p-card>
     </div>
-
-
-
 
 
 </div>
 
+<div class="text-layout">
+    <h1>Date | Fecha | Pipe</h1>
+    <p>
+        Pipe para mostrar las fechas
+    </p>
+</div>
 
 
+<div class="grid" >
+    <div class="col">
+        <p-card>
+            <ul>
+                <li> fecha </li>
+                <li> fecha | date </li>
+                <li> fecha | date:'short' </li>
+                <li> fecha | date:'long' </li>
+                <li> fecha | date:'dd / MMM / YYYY' </li>
+            </ul>
+            <hr>
+            <ul>
+                <li> {{ fecha | date:'long':'GMT-5':'es-PE' }} </li>
+                <li> {{ fecha | date:'long':'GMT-4':'es-PE' }} </li>
+            </ul>
+        </p-card>
+    </div>
+    <div class="col">
+        <p-card>
+            <ul>
+                <li> {{ fecha  }} </li>
+                <li> {{ fecha | date }} </li>
+                <li> {{ fecha | date:'short' }} </li>
+                <li> {{ fecha | date:'long' }} </li>
+                <li> {{ fecha | date:'dd / MMM / YYYY' }} </li>
+            </ul>
+            <hr>
+            <ul>
+                <li> {{ fecha | date:'long':'GMT-5':'es-PE' }} </li>
+                <li> {{ fecha | date:'long':'GMT-4':'es-PE' }} </li>
+                <li> {{ fecha | date:'long':'':'fr' }} </li>
+                
+            </ul>
+        </p-card>
+    </div>
+</div>
