--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,1 +1,59 @@
-<p>ordenar works!</p>
+<div class="text-layout">
+    <h1> Pipes personalizados </h1>
+    <p> Pipes creados por {{ nombre  | mayusculas: enMayusculas  }} </p>
+</div>
+
+<button class="p-button" (click)="presionado()" >
+    toogle mayúsculas
+</button>
+
+<div class="p-toolbar">
+    <div class="p-toolbar-group-left" ></div>
+
+    <div class="p-toolbar-group-right" >
+        <button pButton
+                label="toggle mayúsculas"
+                class="p-mr-1 p-button-warning"
+                (click)="cambiar()"></button>
+        <button pButton
+                icon="pi pi-sort"
+                label="Por nombre"
+                class="p-mr-1"
+                (click)="cambiarOrden('nombre')" ></button>
+        <button pButton
+                icon="pi pi-sort"
+                label="Vuela"
+                class="p-mr-1 p-button-success"
+                (click)="cambiarOrden('vuela')" ></button>
+
+        <button pButton
+                icon="pi pi-sort"
+                label="Por color"
+                class="p-mr-1 p-button-success"
+                (click)="cambiarOrden('color')" ></button>
+    </div>
+</div>
+
+<div class="p-grid">
+    <div class="p-col p-mt-2 ">      
+
+       <p-table  [value]="heroes | ordenar:'nombre' " >
+            <ng-template pTemplate="header" >
+                <tr>
+                    <th>Nombre</th>
+                    <th>Vuela</th>
+                    <th>Color</th>
+                </tr>
+            </ng-template>
+
+            <ng-template pTemplate="body"  let-heroe >
+                <tr >                        
+                    <td>{{heroe.nombre}}</td>
+                    <td>{{heroe.vuela | vuela | titlecase }}</td>
+                    <td>{{heroe.color}}</td>
+                </tr>    
+            </ng-template>
+       </p-table>
+
+    </div>
+</div>
